Use Redis for cache, handle through Docker

--- a/package.json
+++ b/package.json
@@ -8,15 +8,10 @@
     "frontend"
   ],
   "scripts": {
-    "start:backend": "cd backend && npm run start",
-    "start:frontend": "cd frontend && npm run start",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "install:all": "npm install && npm run install:backend && npm run install:frontend",
-    "install:backend": "cd backend && npm install",
-    "install:frontend": "cd frontend && npm install",
-    "build": "npm run build:backend && npm run build:frontend",
-    "build:backend": "cd backend && npm run build",
-    "build:frontend": "cd frontend && npm run build"
+    "start:dev": "npm run redis:start && concurrently \"npm run start:dev -w backend\" \"npm run start -w frontend\"",
+    "install:all": "npm install && npm install -w backend && npm install -w frontend",
+    "redis:start": "docker-compose -f backend/docker-compose.yml up -d redis",
+    "redis:stop": "docker-compose -f backend/docker-compose.yml down redis"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
