--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,19 @@
   "description": "Backend for Ethereum balance checker",
   "main": "dist/main.js",
   "scripts": {
-    "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js"
+    "redis:start": "docker-compose up -d redis",
+    "redis:stop": "docker-compose down redis",
+    "docker:dev": "docker-compose up"
   },
   "dependencies": {
     "@nestjs/common": "^10.2.10",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.2.10",
     "@nestjs/platform-express": "^10.2.10",
     "ethers": "^6.9.0",
+    "redis": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
